2014-12-29 Added new property Don't show pages to Table of Contents
2014-12-24 Added information to pay ettention to the correct linking resources
2014-12-22 Fixed issue with toggling bottom panels in IWB toolbar
2014-12-19 Fixed problem with jumping to the next gap in eKeyboard module
2014-12-18 Fixed calling commands on PageLoaded event in Layered Image module
2014-12-18 Fixed translation of event properties in Image Gap module
2014-12-18 Fixed problem with playing MultiAudio on iPad
2014-12-16 Fixed issues with zooming after deactivating Zoom feature and color and thickness panels visibility in IWB Toolbar module
2014-12-16 Fixed problem with moveToFrame command in ImageViewer addon
2014-12-11 Fixed formatting text with bolds, italics etc. in Text Selection module
2014-12-10 Fixed issue with changing audio on iOS and android in Multi Audio module
2014-12-08 Fixed issue with touch/mouse coordinates, issue with zoom and more in IWB toolbar
2014-12-03 Fixed problem with setting state in Image Viewer addon
2014-12-02 Fixed problem with getting score from Image Identification addon
2014-12-01 Added changes to Swiffy Animation module
2014-12-01 Fixed adding class navigationbar-page-ok in Navigation Bar module
2014-11-28 Fixed problem with animation in SVG format
2014-11-27 Added Show for pen and Show for marker properties in IWB toolbar
2014-11-27 Fixed problem with rewind to start movie in Android 4.1 in Video module
2014-11-27 Fixed problem with view of Text identification module in editor
2014-11-27 Fixed problem with rewind to start movie in Video module
2014-11-27 Added setPenColor and setDefaultPenThickness commands to IWB toolbar
2014-11-27 Fixed problem with jumpTo in Multi Audio module
2014-11-26 Fixed problem with hiding in Video module
2014-11-26 Fixed problem with images in Multiple gap and Image gap module
2014-11-24 Added Vocabulary audio files properties to Text Audio